Add transition to habit page