@@ -2,7 +2,10 @@ package com.echchhit.habittracker.controller;
 
 import com.echchhit.habittracker.service.HabitLogService;
 import com.echchhit.habittracker.service.HabitService;
+import javafx.animation.FadeTransition;
+import javafx.animation.ParallelTransition;
 import javafx.animation.ScaleTransition;
+import javafx.application.Platform;
 import javafx.fxml.FXML;
 import javafx.scene.Node;
 import javafx.scene.control.*;
@@ -15,7 +18,6 @@ import java.time.LocalDate;
 import java.time.YearMonth;
 import java.util.HashMap;
 import java.util.Map;
-import java.util.Optional;
 import java.util.Set;
 
 public class HabitsController {
@@ -29,7 +31,6 @@ public class HabitsController {
 
     @FXML
     public void initialize() {
-        // Populate Month Selector with current and last 5 months
         if (monthSelector.getItems().isEmpty()) {
             for (int i = 0; i < 6; i++) {
                 monthSelector.getItems().add(YearMonth.now().minusMonths(i));
@@ -41,14 +42,17 @@ public class HabitsController {
             });
         }
 
-        // Auto-cross missed habits for yesterday on startup
         dbHabits = HabitService.getAllHabitsWithIds();
+
         LocalDate yesterday = LocalDate.now().minusDays(1);
         for (int id : dbHabits.keySet()) {
             HabitLogService.autoCrossIfMissed(id, yesterday);
         }
 
         refreshUI();
+
+        // Restores the entrance animation every time the section is loaded
+        Platform.runLater(this::animateGridDiagonal);
     }
 
     private void refreshUI() {
@@ -61,39 +65,72 @@ public class HabitsController {
         addBottomTotalRow();
     }
 
+    private void animateGridDiagonal() {
+        ParallelTransition mainParallel = new ParallelTransition();
+        double delayFactor = 15.0; // Adjust this to speed up/slow down the diagonal wave
+
+        for (Node node : habitGrid.getChildren()) {
+            Integer col = GridPane.getColumnIndex(node);
+            Integer row = GridPane.getRowIndex(node);
+
+            if (col == null) col = 0;
+            if (row == null) row = 0;
+
+            // Initialize node as invisible and slightly smaller
+            node.setOpacity(0.0);
+            node.setScaleX(0.8);
+            node.setScaleY(0.8);
+
+            // Create Fade Animation
+            FadeTransition fade = new FadeTransition(Duration.millis(300), node);
+            fade.setToValue(1.0);
+
+            // Create Scale Animation (Pop effect)
+            ScaleTransition scale = new ScaleTransition(Duration.millis(300), node);
+            scale.setToX(1.0);
+            scale.setToY(1.0);
+
+            ParallelTransition cellAnim = new ParallelTransition(node, fade, scale);
+
+            // Calculate diagonal delay: nodes with same (row + col) animate together
+            cellAnim.setDelay(Duration.millis((row + col) * delayFactor));
+
+            mainParallel.getChildren().add(cellAnim);
+        }
+
+        mainParallel.play();
+    }
+
+    // Standard Grid Building Logic
     private void buildDateHeader() {
         int daysInMonth = selectedMonth.lengthOfMonth();
         LocalDate today = LocalDate.now();
-
-        // Habit Name Column
         ColumnConstraints habitCol = new ColumnConstraints();
         habitCol.setPercentWidth(20);
         habitGrid.getColumnConstraints().add(habitCol);
-
         Label header = new Label("HABITS");
-        header.getStyleClass().add("stat-label");
+        header.setStyle("-fx-text-fill: #888; -fx-font-size: 10px;");
         habitGrid.add(header, 0, 0);
 
-        // Date Columns
         double datePercent = 70.0 / daysInMonth;
         for (int day = 1; day <= daysInMonth; day++) {
             ColumnConstraints cc = new ColumnConstraints();
             cc.setPercentWidth(datePercent);
             habitGrid.getColumnConstraints().add(cc);
-
             Label lbl = new Label(String.valueOf(day));
             boolean isActualToday = selectedMonth.equals(YearMonth.now()) && day == today.getDayOfMonth();
-            lbl.setStyle("-fx-text-fill: " + (isActualToday ? "#6C63FF" : "#888") + "; -fx-font-weight: bold;");
-            habitGrid.add(lbl, day, 0);
+            lbl.setStyle("-fx-font-weight: bold; -fx-text-fill: " + (isActualToday ? "#6C63FF" : "#888") + ";");
+            StackPane container = new StackPane(lbl);
+            container.setPrefHeight(30);
+            habitGrid.add(container, day, 0);
         }
 
-        // Total Column
         ColumnConstraints totalCol = new ColumnConstraints();
         totalCol.setPercentWidth(10);
         habitGrid.getColumnConstraints().add(totalCol);
         Label totalHeader = new Label("TOTAL");
-        totalHeader.getStyleClass().add("stat-label");
-        habitGrid.add(totalHeader, daysInMonth + 1, 0);
+        totalHeader.setStyle("-fx-text-fill: #888; -fx-font-size: 10px;");
+        habitGrid.add(new StackPane(totalHeader), daysInMonth + 1, 0);
     }
 
     private void addHabitRows() {
@@ -108,21 +145,7 @@ public class HabitsController {
             habitRowMap.put(habitId, rowIndex);
 
             Label habitLabel = new Label(name);
-            habitLabel.getStyleClass().add("label");
-            habitLabel.setStyle("-fx-font-weight: bold;");
-
-            // Double click to rename
-            habitLabel.setOnMouseClicked(e -> {
-                if (e.getClickCount() == 2) showEditDialog(habitId, name);
-            });
-
-            // Context Menu for Archiving
-            ContextMenu menu = new ContextMenu();
-            MenuItem archive = new MenuItem("Archive Habit");
-            archive.setOnAction(e -> archiveHabit(habitId));
-            menu.getItems().add(archive);
-            habitLabel.setContextMenu(menu);
-
+            habitLabel.setStyle("-fx-font-weight: bold; -fx-font-size: 13px;");
             habitGrid.add(habitLabel, 0, rowIndex);
 
             Set<LocalDate> completedDates = HabitLogService.getCompletedDatesForMonth(habitId, selectedMonth);
@@ -131,142 +154,116 @@ public class HabitsController {
                 LocalDate date = selectedMonth.atDay(day);
                 if (date.isAfter(today)) {
                     habitGrid.add(createFutureBox(), day, rowIndex);
+                } else if (date.equals(today)) {
+                    habitGrid.add(createTodayBox(habitId, completedDates.contains(date)), day, rowIndex);
                 } else {
-                    habitGrid.add(createInteractiveBox(habitId, date, completedDates.contains(date)), day, rowIndex);
+                    habitGrid.add(createLockedBox(completedDates.contains(date)), day, rowIndex);
                 }
             }
 
-            // Row Total
-            Label rowTotalLabel = new Label(String.valueOf(completedDates.size()));
-            rowTotalLabel.setStyle("-fx-font-weight: bold; -fx-text-fill: #888;");
-            habitGrid.add(rowTotalLabel, daysInMonth + 1, rowIndex);
-
+            Label rowTotal = new Label(String.valueOf(completedDates.size()));
+            rowTotal.setStyle("-fx-font-weight: bold; -fx-text-fill: #666;");
+            habitGrid.add(new StackPane(rowTotal), daysInMonth + 1, rowIndex);
             rowIndex++;
         }
     }
 
-    private StackPane createInteractiveBox(int habitId, LocalDate date, boolean completed) {
-        StackPane box = new StackPane();
-        box.setPrefSize(24, 24);
-        box.getStyleClass().add("habit-cell");
-
-        if (date.equals(LocalDate.now())) {
-            box.getStyleClass().add("habit-cell-today");
-        } else {
-            box.getStyleClass().add("habit-cell-locked");
-        }
-
-        if (completed) {
-            addCheck(box);
-        } else if (date.isBefore(LocalDate.now())) {
-            addCross(box);
-        }
+    private StackPane createTodayBox(int habitId, boolean initiallyCompleted) {
+        StackPane box = createEmptyBox();
+        box.setStyle("-fx-cursor: hand; -fx-background-color: transparent; -fx-border-color: #6C63FF; -fx-border-radius: 4; -fx-border-width: 1.5;");
+        if (initiallyCompleted) addCheckMark(box);
 
         box.setOnMouseClicked(e -> {
-            boolean isCurrentlyChecked = !box.getChildren().isEmpty() &&
-                    box.getChildren().get(0).getStyleClass().contains("habit-check");
-
-            if (isCurrentlyChecked) {
-                HabitLogService.markMissed(habitId, date);
+            boolean isChecked = !box.getChildren().isEmpty();
+            LocalDate today = LocalDate.now();
+            if (isChecked) {
+                HabitLogService.markMissed(habitId, today);
                 box.getChildren().clear();
-                if (date.isBefore(LocalDate.now())) addCross(box);
+                box.setStyle("-fx-cursor: hand; -fx-background-color: transparent; -fx-border-color: #6C63FF; -fx-border-radius: 4; -fx-border-width: 1.5;");
             } else {
-                // Modified markCompleted to accept specific date for history
-                HabitLogService.markCompleted(habitId, date);
-                addCheck(box);
+                HabitLogService.markCompleted(habitId, today);
+                addCheckMark(box);
+                box.setStyle("-fx-cursor: hand; -fx-background-color: rgba(108, 99, 255, 0.1); -fx-border-color: #6C63FF; -fx-border-radius: 4; -fx-border-width: 1.5;");
             }
-            refreshRowAndColumnTotals(habitId, date);
+            refreshTotals();
+            refreshRowTotal(habitId, habitRowMap.get(habitId));
             MainController.refreshStats();
         });
         return box;
     }
 
-    private void addCheck(StackPane box) {
-        box.getChildren().clear();
-        Label check = new Label("✓");
-        check.getStyleClass().add("habit-check");
-        box.getChildren().add(check);
-        ScaleTransition st = new ScaleTransition(Duration.millis(200), check);
-        st.setFromX(0.5); st.setFromY(0.5); st.setToX(1); st.setToY(1); st.play();
-    }
-
-    private void addCross(StackPane box) {
-        box.getChildren().clear();
-        Label cross = new Label("✗");
-        cross.getStyleClass().add("habit-cross");
-        box.getChildren().add(cross);
-    }
-
-    private StackPane createFutureBox() {
-        StackPane box = new StackPane();
-        box.setPrefSize(24, 24);
-        box.getStyleClass().addAll("habit-cell", "habit-cell-future");
-        return box;
-    }
-
-    private void showEditDialog(int id, String oldName) {
-        TextInputDialog dialog = new TextInputDialog(oldName);
-        dialog.setTitle("Rename Habit");
-        dialog.setHeaderText("Change habit name:");
-        dialog.showAndWait().ifPresent(newName -> {
-            if (!newName.isBlank()) {
-                HabitService.updateHabitName(id, newName.trim());
-                refreshUI();
-            }
-        });
-    }
-
-    private void archiveHabit(int id) {
-        Alert alert = new Alert(Alert.AlertType.CONFIRMATION, "Archive this habit?", ButtonType.YES, ButtonType.NO);
-        alert.showAndWait().ifPresent(type -> {
-            if (type == ButtonType.YES) {
-                HabitService.markHabitCompleted(id);
-                refreshUI();
-            }
-        });
-    }
-
+    // REQUIRED: Fixes the FXML LoadException
     @FXML
     private void onAddHabit() {
         TextInputDialog dialog = new TextInputDialog();
-        dialog.setTitle("New Habit");
-        dialog.setHeaderText("Enter habit name:");
+        dialog.setTitle("Add Habit");
+        dialog.setHeaderText(null);
+        dialog.setContentText("Enter habit name:");
         dialog.showAndWait().ifPresent(name -> {
-            if (!name.isBlank()) {
+            if (!name.trim().isEmpty()) {
                 HabitService.addHabit(name.trim());
                 refreshUI();
             }
         });
     }
 
-    private void refreshRowAndColumnTotals(int habitId, LocalDate date) {
-        int row = habitRowMap.get(habitId);
-        int daysInMonth = selectedMonth.lengthOfMonth();
-
-        // Update Row Total
-        Label rTotal = (Label) getNodeAt(daysInMonth + 1, row);
-        if (rTotal != null) {
-            int count = HabitLogService.getCompletedDatesForMonth(habitId, selectedMonth).size();
-            rTotal.setText(String.valueOf(count));
-        }
-
-        // Update Column Total at Bottom
-        Label bTotal = (Label) getNodeAt(date.getDayOfMonth(), dbHabits.size() + 1);
-        if (bTotal != null) {
-            bTotal.setText(String.valueOf(HabitLogService.getCompletedCountByDate(date)));
-        }
+    private void addCheckMark(StackPane box) {
+        Label check = new Label("✓");
+        check.setStyle("-fx-text-fill: #4CAF50; -fx-font-size: 14px; -fx-font-weight: bold;");
+        box.getChildren().setAll(check);
+        ScaleTransition st = new ScaleTransition(Duration.millis(200), check);
+        st.setFromX(0.1); st.setFromY(0.1);
+        st.setToX(1.0); st.setToY(1.0);
+        st.play();
     }
 
     private void addBottomTotalRow() {
-        int row = dbHabits.size() + 1;
-        Label lbl = new Label("TOTAL");
-        lbl.getStyleClass().add("stat-label");
-        habitGrid.add(lbl, 0, row);
+        int bottomRow = habitRowMap.size() + 1;
+        Label totalLabel = new Label("TOTAL");
+        totalLabel.setStyle("-fx-font-weight: bold; -fx-text-fill: #888; -fx-font-size: 10px;");
+        habitGrid.add(totalLabel, 0, bottomRow);
 
-        for (int d = 1; d <= selectedMonth.lengthOfMonth(); d++) {
-            Label val = new Label(String.valueOf(HabitLogService.getCompletedCountByDate(selectedMonth.atDay(d))));
-            val.setStyle("-fx-text-fill: #6C63FF; -fx-font-weight: bold;");
-            habitGrid.add(val, d, row);
+        Label totalValue = new Label(String.valueOf(HabitLogService.getCompletedCountToday()));
+        totalValue.setStyle("-fx-font-weight: bold; -fx-text-fill: #6C63FF;");
+        habitGrid.add(new StackPane(totalValue), LocalDate.now().getDayOfMonth(), bottomRow);
+    }
+
+    private StackPane createLockedBox(boolean completed) {
+        StackPane box = createEmptyBox();
+        Label icon = new Label(completed ? "✓" : "✗");
+        icon.setStyle(completed ? "-fx-text-fill: #666;" : "-fx-text-fill: #444; -fx-font-size: 10px;");
+        box.getChildren().setAll(icon);
+        return box;
+    }
+
+    private StackPane createFutureBox() {
+        StackPane box = createEmptyBox();
+        box.setStyle("-fx-border-color: #dcdcdc; -fx-border-radius: 4; -fx-opacity: 0.3;");
+        return box;
+    }
+
+    private StackPane createEmptyBox() {
+        StackPane box = new StackPane();
+        box.setPrefSize(24, 24);
+        box.setMinSize(24, 24);
+        box.setMaxSize(24, 24);
+        box.setStyle("-fx-border-color: #dcdcdc; -fx-border-radius: 4;");
+        return box;
+    }
+
+    private void refreshTotals() {
+        int today = LocalDate.now().getDayOfMonth();
+        StackPane container = (StackPane) getNodeAt(today, habitRowMap.size() + 1);
+        if (container != null) {
+            ((Label)container.getChildren().get(0)).setText(String.valueOf(HabitLogService.getCompletedCountToday()));
+        }
+    }
+
+    private void refreshRowTotal(int habitId, int row) {
+        int count = HabitLogService.getCompletedDatesForMonth(habitId, selectedMonth).size();
+        StackPane container = (StackPane) getNodeAt(selectedMonth.lengthOfMonth() + 1, row);
+        if (container != null) {
+            ((Label)container.getChildren().get(0)).setText(String.valueOf(count));
         }
     }
 
